--- a/html/fileManagement.html
+++ b/html/fileManagement.html
@@ -6,24 +6,27 @@
     <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
     <META HTTP-EQUIV="Expires" CONTENT="-1">
     <title>DOCSYS - mantenimiento archivos</title>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+
+    <script src="/javascripts/jquery.js" type="text/javascript"></script>
+    <link href="/javascripts/bootstrap3/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="/javascripts/bootstrap3/js/bootstrap.min.js"></script>
     <link href="/stylesheets/indexUsr.css" rel="stylesheet" type="text/css" />
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css" />
     <link href="stylesheets/general.css" rel="stylesheet" type="text/css" />
     <link href="stylesheets/tooltip.css" rel="stylesheet" type="text/css" />
     <link href="stylesheets/snackbar.css" rel="stylesheet" type="text/css" />
     <!--link href="/javascripts/jquerySimpleFilePreview/jquerySimpleFilePreview.css" rel="stylesheet" type="text/css" /-->
-    <script src="/javascripts/modernizr-custom.js" type="text/javascript"></script>
+
     <script src="/javascripts/DataTables/datatables.js" type="text/javascript"></script>
     <script src="/javascripts/jquerySimpleFilePreview/jquery.simpleFilePreview.js" type="text/javascript"></script>
     <script src="/javascripts/snackbar.js" type="text/javascript"></script>
     <script src="/javascripts/global.js" type="text/javascript"></script>
+    <script src="/javascripts/download.js" type="text/javascript"></script>
+
     <script src="/javascripts/jquery-confirm/jquery-confirm.min.js"></script>
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.3.1/css/all.css">
-    <link rel="stylesheet" href="//cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
-    <link rel="stylesheet" href="//cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css">
+    <link rel="stylesheet" href="/javascripts/DataTables/DataTables-1.10.18/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="/javascripts/DataTables/responsive-2.2.2/css/responsive.bootstrap4.min.css">
     <link rel="stylesheet" href="/javascripts/jquery-confirm/jquery-confirm.min.css">
 </head>
 
@@ -161,9 +164,9 @@
             </table>
         </div>
         <div class="container" style="margin-top:30px; text-align: center; cursor: pointer; padding-bottom: 30px">
-            <form class="box" method="post" action="" enctype="multipart/form-data">
+            <form id='formData' class="box" method="post" action="api/file/upload" enctype="multipart/form-data">
                 <div class="box__input">
-                    <input class="box__file" type="file" name="files[]" id="file"
+                    <input class="box__file" type="file" name="files" id="file"
                         data-multiple-caption="{count} archivos seleccionados: {names}" multiple />
                     <label id='noInput' for="file" style="width: 100%; cursor: pointer"><strong><u>Elige
                                 archivos</u></strong><span class="box__dragndrop"> o arrastralos
@@ -444,7 +447,7 @@
                 conflicts.shift()
             else
                 rejectedConflicts.push(conflicts.shift())
-            sendData(false)
+            prepareData(false)
         }
         const askModal = () => {
             $('#modalTittle2').html("Atención")
@@ -453,7 +456,7 @@
         }
         const monthNames = ["Ene", "Feb", "Mar", "Abr", "May", "Jun", "Jul", "Ago", "Sep", "Oct", "Nov", "Dic"];
 
-        const sendData = (first = true) => {
+        const prepareData = (first = true) => {
             let data = Array.from(t.rows().data())
             if (first) {
                 window.conflicts = $files.filter(e => data.some(ac => ac[0].split('&nbsp')[1].split("<")[1].split(">")[1] == e.name))
@@ -490,7 +493,8 @@
                 let imgExt = undefined;
                 //console.log("archivos a mandar")
                 //console.log($files.filter(e=>!rejectedConflicts.some(r=>r==e)))
-                $files.filter(e => !rejectedConflicts.some(r => r == e)).forEach(f => {
+                //$('input[type=file]')[0].files = FileListItem($files.filter(e => !rejectedConflicts.some(r => r == e)))
+                /*.forEach(f => {
                     today = new Date(f.lastModified)
                     dateCreation = today.getDate() + ' de ' + monthNames[today.getMonth()] + ', ' + today.getFullYear()
                     imgExt = setImage(f.name.split('.').pop())
@@ -503,7 +507,7 @@
                             updateTableListener()
                         }
                     }
-                })
+                })*/
             }
 
         }
@@ -535,6 +539,15 @@
                     return undefined;
             }
         }
+
+        const FileListItem = a => {
+            a = [].slice.call(Array.isArray(a) ? a : arguments)
+            for (var c, b = c = a.length, d = !0; b-- && d;) d = a[b] instanceof File
+            if (!d) throw new TypeError("expected argument to FileList is File or array of File objects")
+            for (b = (new ClipboardEvent("")).clipboardData || new DataTransfer; c--;) b.items.add(a[c])
+            return b.files
+        }
+
         const simulateGoBack = (hash = "") => {
             if (hash == "") {
                 if (tree.length > 1) {
@@ -577,6 +590,17 @@
                     return 'Invitado:'
             }
         }
+        const getFilePreview = async (e) => {
+            let result = await fetch(`/api/file/${e[0].parent()[0].id}`, {
+                method: "GET",
+                //body: JSON.stringify(search),
+                headers: {
+                    "Content-Type": "application/json; charset=utf-8"
+                }
+            })
+            console.log(result)
+            return '<iframe style="width:100%;height:500px;" src="data:application/pdf;base64,' + result.data + '"></iframe>'
+        }
         var clicks = 0
         const updateTableListenerd = () =>
             $('#tableReview tbody').on('click', e => {// tbody tr td
@@ -603,21 +627,80 @@
                         insertDataDM(x.map(e => $(e)))
                 }
             })
+        const supportedMIMES = ['application/pdf', 'text/plain', 'image/jpeg', 'image/png']
+        window.cntnttype = ''
         const insertDataDM = (e) => {
-            e.pop()
+            console.log(e.pop())
             $.confirm({
                 title: 'Descarga archivo',
                 closeIcon: true,
-                content: '' + getTableData(e)[0].outerHTML,
+                content: function () {
+                    let self = this
+                    return fetch(`/api/file/${e[0].parent()[0].id}`, {
+                        method: "GET",
+                        //body: JSON.stringify(search),
+                        headers: {
+                            "Content-Type": "application/json; charset=utf-8"
+                        }
+                    }).then(response => { if (response.status == 200) { window.cntnt = response.headers.get('content-type'); window.fileName = response.headers.get('filename'); window.isonMIME = supportedMIMES.includes(window.cntnt); return response.body } throw 'error' })
+                        .then(body => {
+                            const reader = body.getReader();
+
+                            return new ReadableStream({
+                                start(controller) {
+                                    return pump();
+
+                                    function pump() {
+                                        return reader.read().then(({ done, value }) => {
+                                            // When no more data needs to be consumed, close the stream
+                                            if (done) {
+                                                controller.close();
+                                                return;
+                                            }
+
+                                            // Enqueue the next data chunk into our target stream
+                                            controller.enqueue(value);
+                                            return pump();
+                                        });
+                                    }
+                                }
+                            })
+                        })
+                        .then(stream => { a = new Response(stream); a.headers.append('content-type', window.cntnt); return a })
+                        .then(response => response.blob())
+                        .then(result => {
+                            window.currentBlob = result
+                            $(self.$jconfirmBoxContainer[0]).toggleClass('col-md-8 col-md-offset-2 col-md-4 col-md-offset-4')
+                            var file = window.URL.createObjectURL(result.slice(0, result.size, window.cntnt));
+                            if (window.isonMIME) {
+                                if (window.cntnt.split('/')[0] == 'image')
+                                    self.setContent(`<div style='width: 100%; max-height: 600px; overflow: auto'><img src="${file}" alt="${file}" style='width: 100%; height: 100%; display:block'></img></div><br> ${getTableData(e)[0].outerHTML}`)
+                                else {
+                                    self.setContent(/*`<iframe src='https://docs.google.com/viewer?url=${file}&embedded=true' width='500px' height='500px' frameborder='0'>
+</iframe>`*/`<iframe id="ifr" style="width:100%;height:600px;"frameborder="0" noresize  src="${file}"></iframe><br> ${getTableData(e)[0].outerHTML}`)
+                                }
+                            }
+                            else {
+                                $(self.$jconfirmBoxContainer[0]).toggleClass('col-md-8 col-md-offset-2 col-md-4 col-md-offset-4')
+                                self.setContent(/*`<iframe src='https://docs.google.com/viewer?url=${file}&embedded=true' width='500px' height='500px' frameborder='0'>
+</iframe>`*/`<iframe style="width:100%;height:50px;" src="http://localhost:3000/noPreview.html"><h1></h1></iframe><br> ${getTableData(e)[0].outerHTML}`)
+                            }
+                        }).catch(console.log)
+                },
                 buttons: {
                     formSubmit: {
                         text: 'Descargar',
                         btnClass: 'btn-blue',
-                        action: function () { }
+                        action: function () {
+                            download(window.currentBlob, window.fileName, "application/octet-stream")
+                        }
                     },
                     cancelar: function () {
                         //close
-                    },
+                    }
+                },
+                onContentReady: function () {
+                    console.log($($('.shrinkToFit').toArray()[0]).parent()[0])
                 }
             })
         }
@@ -627,6 +710,7 @@
             return $("<div class='container' style='max-width: 90%'/>").append($('<table class="table table-bordered" style="max-width: 100%"/>').append(data)[0])
         }
         $('document').ready(() => {
+
             removeHash()
             updateTableListenerd()
             window.t = $('#tableReview').DataTable({
@@ -682,7 +766,7 @@
                             let dateCreation = today.getDate() + ' de ' + monthNames[today.getMonth()] + ', ' + today.getFullYear()
                             return ['<span style="display: inline; margin-right: 6px; vertical-align: text-bottom;"><img src="/images/' + (e.type ? setImage(e.type) : e.name == '..Atrás' ? '003-folder-upload.svg' : '048-folder.svg') + '" style="display: inline-block"></img>&nbsp<p style="display: inline-block;word-wrap: break-word; word-break: break-all; white-space: normal">' + e.name + '</p></span>',
                             e.type || "Carpeta",
-                                "––",
+                            e.type ? returnFileSize(e.size) : "––",
                                 dateCreation,
                             e.name == '..Atrás' ? "<span  style='margin-left:calc(50% - 20px); color: #000000' >––</span>" : "<span class='fa fa-window-close' style='margin-left:calc(50% - 20px); color: #FF5722' onclick='deleteRow($(this))'></span>",
                             e._id]
@@ -710,10 +794,25 @@
                 if (!conflicts.length)
                     $('#modalRow2').modal('toggle')
             })
-            $('#submitForm').click(e => {
-                e.preventDefault()
-                sendData()
-            })
+            $("#formData").submit(function (e) {
+                e.preventDefault();
+                prepareData()
+                var formData = new FormData(this);
+                $.ajax({
+                    type: "POST",
+                    url: `/api/file/upload/${currentFolder}`,
+                    data: formData,
+                    processData: false,
+                    contentType: false,
+                    success: function (r) {
+                        console.log("result", r)
+                    },
+                    error: function (e) {
+                        console.log("some error", e);
+                    }
+                });
+
+            });
             updateTableListener()
             $('#tableReview_info').html(`<p style='word-wrap: break-word; word-break: normal; white-space: normal'>${$('#tableReview_info').html()}</p>`)
 
@@ -835,6 +934,5 @@
         })
 
     </script>
-    <script src="/javascripts/indexUsr.js" type="text/javascript"></script>
 
 </html>
